--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "@types/react-dom": "^18.2.14",
     "astro": "^3.3.2",
     "framer-motion": "^10.16.4",
-    "maath": "^0.10.4",
+    "maath": "^0.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-tilt": "^1.0.2",
-    "tailwindcss": "^3.3.3"
+    "react-vertical-timeline-component": "^3.6.0",
+    "tailwindcss": "^3.3.3",
+    "three": "^0.156.1",
+    "postcss": "^8.4.29"
+
   }
 }
