--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.17.0",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
+    "tailwindcss": "^3.3.3",
     "three": "^0.156.1",
     "postcss": "^8.4.29"
 
