--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "astro": "^3.3.2",
     "framer-motion": "^10.16.4",
     "maath": "^0.7.0",
+    "postcss": "^8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
@@ -26,7 +27,6 @@
     "react-vertical-timeline-component": "^3.6.0",
     "tailwindcss": "^3.3.3",
     "three": "^0.156.1",
-    "postcss": "^8.4.29"
-
+    "zod": "^3.22.4"
   }
 }
