--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "astro": "^3.3.2",
     "framer-motion": "^10.16.4",
     "maath": "^0.7.0",
+    "nuka-carousel": "^6.0.3",
     "postcss": "^8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
+    "react-slick": "^0.29.0",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
     "tailwindcss": "^3.3.3",
