--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "maath": "^0.7.0",
     "nuka-carousel": "^6.0.3",
     "postcss": "^8.4.29",
+    "rc-collapse": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
