--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "^8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-form-component": "^2.6.3",
     "react-router-dom": "^6.17.0",
     "react-slick": "^0.29.0",
     "react-tilt": "^1.0.2",
